# azure_rust_api

./: .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
migrations/2024-04-08-181945_create_users/: up.sql
src/: auth.rs  main.rs  middleware.rs  models.rs  routes.rs  schema.rs
