[package]
name = "azure_rust_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
actix-rt = "1.0"
actix-service = "2.0.2"
diesel = { version = "1.4.6", features = ["mysql","r2d2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
tokio = { version = "1.0", features = ["full"] }
bcrypt = "0.8.2" 
listenfd = "1.0.1"
jsonwebtoken = "7.2.0"
chrono = "0.4"
futures = "0.3"
env_logger = "0.9"
log = "0.4"
